--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-argcomplete==3.5.3
-attrs==25.1.0
-cattrs==24.1.2
-click==8.1.8
 docstring-to-markdown==0.15
 jedi==0.19.2
-jedi-language-server==0.43.1
-lsprotocol==2023.0.1
 packaging==24.2
 parso==0.8.4
-pipx==1.7.1
 platformdirs==4.3.6
-pygls==1.3.1
-userpath==1.9.2
+pluggy==1.5.0
+pyflakes==3.2.0
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.12.2
+pytoolconfig==1.3.1
+rope==1.13.0
+ujson==5.10.0
+whatthepatch==1.0.7
+yapf==0.43.0
